added new assignement for webscraping and clustering

--- a/ibm_data_science_capstone.ipynb
+++ b/ibm_data_science_capstone.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "<h1>This notebook is to show abilites in Data Science learned during the IBM Professional Data Science Certfication through Coursera</h1>\n",
-    "<h2>Specificall I will be working on a Capstone project involving location and geospatial data.</h2>"
+    "<h2>Specifically I will be working on a Capstone project involving location and geospatial data.</h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,247 @@
    ],
    "source": [
     "print(\"Hello Capstone Project Course\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "Collecting package metadata (repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "Folium installed\n",
+      "Libraries imported.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests # library to handle requests\n",
+    "import pandas as pd # library for data analsysis\n",
+    "import numpy as np # library to handle data in a vectorized manner\n",
+    "import random # library for random number generation\n",
+    "\n",
+    "!conda install -c conda-forge geopy --yes \n",
+    "from geopy.geocoders import Nominatim # module to convert an address into latitude and longitude values\n",
+    "\n",
+    "# libraries for displaying images\n",
+    "from IPython.display import Image \n",
+    "from IPython.core.display import HTML \n",
+    "    \n",
+    "# tranforming json file into a pandas dataframe library\n",
+    "from pandas.io.json import json_normalize\n",
+    "\n",
+    "!conda install -c conda-forge folium=0.5.0 --yes\n",
+    "import folium # plotting library\n",
+    "\n",
+    "print('Folium installed')\n",
+    "print('Libraries imported.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your credentails:\n",
+      "CLIENT_ID: PE3AL3AOMY2NJF1HV1ULIAW0VX4MHLSXL1UNZ5ZY1IKNHDRZ\n",
+      "CLIENT_SECRET:ER3SVRU3N2M1WVDT5U52OSXUGORV454QPQWR0XSZNAOVE3UR\n"
+     ]
+    }
+   ],
+   "source": [
+    "CLIENT_ID = 'PE3AL3AOMY2NJF1HV1ULIAW0VX4MHLSXL1UNZ5ZY1IKNHDRZ' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'ER3SVRU3N2M1WVDT5U52OSXUGORV454QPQWR0XSZNAOVE3UR' # your Foursquare Secret\n",
+    "VERSION = '20180604'\n",
+    "LIMIT = 30\n",
+    "print('Your credentails:')\n",
+    "print('CLIENT_ID: ' + CLIENT_ID)\n",
+    "print('CLIENT_SECRET:' + CLIENT_SECRET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Italian .... OK!\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_query = 'Italian'\n",
+    "radius = 500\n",
+    "print(search_query + ' .... OK!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.7149555 -74.0153365\n"
+     ]
+    }
+   ],
+   "source": [
+    "address = '102 North End Ave, New York, NY'\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"foursquare_agent\")\n",
+    "location = geolocator.geocode(address)\n",
+    "latitude = location.latitude\n",
+    "longitude = location.longitude\n",
+    "print(latitude, longitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://api.foursquare.com/v2/venues/search?client_id=PE3AL3AOMY2NJF1HV1ULIAW0VX4MHLSXL1UNZ5ZY1IKNHDRZ&client_secret=ER3SVRU3N2M1WVDT5U52OSXUGORV454QPQWR0XSZNAOVE3UR&ll=40.7149555,-74.0153365&v=20180604&query=Italian&radius=500&limit=30'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://api.foursquare.com/v2/venues/search?client_id={}&client_secret={}&ll={},{}&v={}&query={}&radius={}&limit={}'.format(CLIENT_ID, CLIENT_SECRET, latitude, longitude, VERSION, search_query, radius, LIMIT)\n",
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'meta': {'code': 200, 'requestId': '5d3d0be123bb8e0032418142'},\n",
+       " 'response': {'venues': [{'id': '4fa862b3e4b0ebff2f749f06',\n",
+       "    'name': \"Harry's Italian Pizza Bar\",\n",
+       "    'location': {'address': '225 Murray St',\n",
+       "     'lat': 40.71521779064671,\n",
+       "     'lng': -74.01473940209351,\n",
+       "     'labeledLatLngs': [{'label': 'display',\n",
+       "       'lat': 40.71521779064671,\n",
+       "       'lng': -74.01473940209351}],\n",
+       "     'distance': 58,\n",
+       "     'postalCode': '10282',\n",
+       "     'cc': 'US',\n",
+       "     'city': 'New York',\n",
+       "     'state': 'NY',\n",
+       "     'country': 'United States',\n",
+       "     'formattedAddress': ['225 Murray St',\n",
+       "      'New York, NY 10282',\n",
+       "      'United States']},\n",
+       "    'categories': [{'id': '4bf58dd8d48988d1ca941735',\n",
+       "      'name': 'Pizza Place',\n",
+       "      'pluralName': 'Pizza Places',\n",
+       "      'shortName': 'Pizza',\n",
+       "      'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/pizza_',\n",
+       "       'suffix': '.png'},\n",
+       "      'primary': True}],\n",
+       "    'delivery': {'id': '294544',\n",
+       "     'url': 'https://www.seamless.com/menu/harrys-italian-pizza-bar-225-murray-st-new-york/294544?affiliate=1131&utm_source=foursquare-affiliate-network&utm_medium=affiliate&utm_campaign=1131&utm_content=294544',\n",
+       "     'provider': {'name': 'seamless',\n",
+       "      'icon': {'prefix': 'https://fastly.4sqi.net/img/general/cap/',\n",
+       "       'sizes': [40, 50],\n",
+       "       'name': '/delivery_provider_seamless_20180129.png'}}},\n",
+       "    'referralId': 'v-1564281825',\n",
+       "    'hasPerk': False},\n",
+       "   {'id': '4f3232e219836c91c7bfde94',\n",
+       "    'name': 'Conca Cucina Italian Restaurant',\n",
+       "    'location': {'address': '63 W Broadway',\n",
+       "     'lat': 40.71446,\n",
+       "     'lng': -74.010086,\n",
+       "     'labeledLatLngs': [{'label': 'display',\n",
+       "       'lat': 40.71446,\n",
+       "       'lng': -74.010086}],\n",
+       "     'distance': 446,\n",
+       "     'postalCode': '10007',\n",
+       "     'cc': 'US',\n",
+       "     'city': 'New York',\n",
+       "     'state': 'NY',\n",
+       "     'country': 'United States',\n",
+       "     'formattedAddress': ['63 W Broadway',\n",
+       "      'New York, NY 10007',\n",
+       "      'United States']},\n",
+       "    'categories': [{'id': '4d4b7105d754a06374d81259',\n",
+       "      'name': 'Food',\n",
+       "      'pluralName': 'Food',\n",
+       "      'shortName': 'Food',\n",
+       "      'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/default_',\n",
+       "       'suffix': '.png'},\n",
+       "      'primary': True}],\n",
+       "    'referralId': 'v-1564281825',\n",
+       "    'hasPerk': False},\n",
+       "   {'id': '3fd66200f964a520f4e41ee3',\n",
+       "    'name': 'Ecco',\n",
+       "    'location': {'address': '124 Chambers St',\n",
+       "     'crossStreet': 'btwn Church St & W Broadway',\n",
+       "     'lat': 40.71533713859952,\n",
+       "     'lng': -74.00884766217825,\n",
+       "     'labeledLatLngs': [{'label': 'display',\n",
+       "       'lat': 40.71533713859952,\n",
+       "       'lng': -74.00884766217825}],\n",
+       "     'distance': 549,\n",
+       "     'postalCode': '10007',\n",
+       "     'cc': 'US',\n",
+       "     'city': 'New York',\n",
+       "     'state': 'NY',\n",
+       "     'country': 'United States',\n",
+       "     'formattedAddress': ['124 Chambers St (btwn Church St & W Broadway)',\n",
+       "      'New York, NY 10007',\n",
+       "      'United States']},\n",
+       "    'categories': [{'id': '4bf58dd8d48988d110941735',\n",
+       "      'name': 'Italian Restaurant',\n",
+       "      'pluralName': 'Italian Restaurants',\n",
+       "      'shortName': 'Italian',\n",
+       "      'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/italian_',\n",
+       "       'suffix': '.png'},\n",
+       "      'primary': True}],\n",
+       "    'referralId': 'v-1564281825',\n",
+       "    'hasPerk': False}]}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = requests.get(url).json()\n",
+    "results"
    ]
   },
   {
