--- a/toronto_webscrape_cluster.ipynb
+++ b/toronto_webscrape_cluster.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 234,
    "metadata": {
     "scrolled": true
    },
@@ -763,14 +763,14 @@
        "[203 rows x 3 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_by_pc = pd_borough.groupby('Postcode')\n",
-    "df_by_pc.head()"
+    "df_by_pc.head(5)"
    ]
   },
   {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 235,
    "metadata": {
     "scrolled": true
    },
@@ -1013,27 +1013,167 @@
        "      <td>Scarborough</td>\n",
        "      <td>Cedarbrae</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M1J</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Scarborough Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>M1K</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>East Birchmount Park, Ionview, Kennedy Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>M1L</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Clairlea, Golden Mile, Oakridge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>M1M</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cliffcrest, Cliffside, Scarborough Village West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>M1N</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Birch Cliff, Cliffside West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>M1P</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Dorset Park, Scarborough Town Centre, Wexford ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>M1R</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Maryvale, Wexford</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>M1S</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Agincourt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>M1T</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Clarks Corners, Sullivan, Tam O'Shanter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>M1V</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Agincourt North, L'Amoreaux East, Milliken, St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>M1W</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>L'Amoreaux West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>M1X</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Upper Rouge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>M2H</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Hillcrest Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>M2J</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Fairview, Henry Farm, Oriole</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>M2K</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Bayview Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>M2L</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Silver Hills, York Mills</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>M2M</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Newtonbrook, Willowdale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>M2N</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Willowdale South</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>M2P</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>York Mills West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>M2R</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Willowdale West</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Postcode      Borough                           Neighbourhood\n",
-       "0      M1B  Scarborough                          Rouge, Malvern\n",
-       "1      M1C  Scarborough  Highland Creek, Rouge Hill, Port Union\n",
-       "2      M1E  Scarborough       Guildwood, Morningside, West Hill\n",
-       "3      M1G  Scarborough                                  Woburn\n",
-       "4      M1H  Scarborough                               Cedarbrae"
+       "   Postcode      Borough                                      Neighbourhood\n",
+       "0       M1B  Scarborough                                     Rouge, Malvern\n",
+       "1       M1C  Scarborough             Highland Creek, Rouge Hill, Port Union\n",
+       "2       M1E  Scarborough                  Guildwood, Morningside, West Hill\n",
+       "3       M1G  Scarborough                                             Woburn\n",
+       "4       M1H  Scarborough                                          Cedarbrae\n",
+       "5       M1J  Scarborough                                Scarborough Village\n",
+       "6       M1K  Scarborough        East Birchmount Park, Ionview, Kennedy Park\n",
+       "7       M1L  Scarborough                    Clairlea, Golden Mile, Oakridge\n",
+       "8       M1M  Scarborough    Cliffcrest, Cliffside, Scarborough Village West\n",
+       "9       M1N  Scarborough                        Birch Cliff, Cliffside West\n",
+       "10      M1P  Scarborough  Dorset Park, Scarborough Town Centre, Wexford ...\n",
+       "11      M1R  Scarborough                                  Maryvale, Wexford\n",
+       "12      M1S  Scarborough                                          Agincourt\n",
+       "13      M1T  Scarborough            Clarks Corners, Sullivan, Tam O'Shanter\n",
+       "14      M1V  Scarborough  Agincourt North, L'Amoreaux East, Milliken, St...\n",
+       "15      M1W  Scarborough                                    L'Amoreaux West\n",
+       "16      M1X  Scarborough                                        Upper Rouge\n",
+       "17      M2H   North York                                  Hillcrest Village\n",
+       "18      M2J   North York                       Fairview, Henry Farm, Oriole\n",
+       "19      M2K   North York                                    Bayview Village\n",
+       "20      M2L   North York                           Silver Hills, York Mills\n",
+       "21      M2M   North York                            Newtonbrook, Willowdale\n",
+       "22      M2N   North York                                   Willowdale South\n",
+       "23      M2P   North York                                    York Mills West\n",
+       "24      M2R   North York                                    Willowdale West"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nb_df_combine.loc[nb_df_combine['Neighbourhood']=='Not assigned', ['Neighbourhood']] = nb_df_combine['Borough']\n",
-    "nb_df_combine.head()"
+    "nb_df_combine.head(25)"
    ]
   },
   {
