--- a/toronto_webscrape_cluster.ipynb
+++ b/toronto_webscrape_cluster.ipynb
@@ -1201,7 +1201,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Install geocoder library and use to obtain Long and Lat for postal codes. Adding while loop to be sure values are available</h4>"
+    "<h2>Part 2 -- Geocoding Data</h2><br>\n",
+    "<h4> Install geocoder library and use to obtain Long and Lat for postal codes. Adding while loop to be sure values are available</h4> <br> <h4><strong>***as seen below geocoder library was unsuccessful***</strong></h4><br><h4>Had to use provided csv file"
    ]
   },
   {
