Description of Data used

--- a/moving_challenge.ipynb
+++ b/moving_challenge.ipynb
@@ -306,7 +306,9 @@
   {
    "cell_type": "code",
    "execution_count": 347,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -634,8 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_chicago = r'https://en.wikipedia.org/wiki/List_of_neighborhoods_in_Chicago'\n",
-    "#url_chicago = r'https://en.wikipedia.org/w/index.php?title=List_of_neighborhoods_in_Chicago&action=edit&section=1'"
+    "url_chicago = r'https://en.wikipedia.org/wiki/List_of_neighborhoods_in_Chicago'"
    ]
   },
   {
