--- a/neighborhood_relocation_recommendation.ipynb
+++ b/neighborhood_relocation_recommendation.ipynb
@@ -4,20 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:blue\"> <ins>Project: Moving Challenge:</ins></h1>\n",
-    "<h4 align=justify>  I am attempting to use available datasets in conjunction with Foursquare and Google API's to determine the best place to move. <br>I am using location data from my four favorite neighborhoods in my four favorite cities:<br> <ol> 1) La Jolla,an Diego, CA</ol> <ol>2) West Palm Beach, FL</ol> <ol>3) Downtown Chicago</ol> <ol>4) Portland, Maine</ol> I want to find the venues that best characterize a location combining attributes of each location with Foursquare.<br>\n",
-    "    I will cluster the data from:<br> <ol>1) Dallas, TX</ol> <ol>2) Jacksonville, FL</ol> <ol>3) Chicago, IL</ol> <ol>4) Austin, TX</ol> <ol>5) San Diego, CA</ol> I will find the neighborhoods most like my ideal match using SciKitlearn KMeans Clusttering of Foursquare data. Next, a further segmentation by demographics, job availability, and income gathered from website and census data will help me choose my ideal neghborhood.  </h4>"
+    "<span style=\"color:blue; font-size:22pt\"> <ins>**Project: Moving Challenge:**</ins></span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <br><h2 align=justify style=\"color:green\"> <ins>First I will gather the neighborhood names from a variety of websites including:</ins></h2>\n",
-    "<h3>\n",
-    "    <ol><a href=\"http://www.Wikipedia.com\" target = _blank>Wikipedia.com</a></ol>\n",
-    "    <ol><a href=\"http://www.Conservapedia.com\" target = _blank>Conservapedia.com</a></ol><br>\n",
-    "    I will parse them using a comnination of pandas.read_html, BeautifulSoup, requests, and json.</h3>"
+    "<h4 align=justify>  I am attempting to use available datasets in conjunction with Foursquare and Google API's to determine the best place to move. I am using location data from my four favorite neighborhoods in my four favorite cities:<br> <ol> 1) La Jolla,an Diego, CA</ol> <ol>2) West Palm Beach, FL</ol> <ol>3) Downtown Chicago</ol> <ol>4) Portland, Maine</ol> I want to find the venues that best characterize a location combining attributes of each location with Foursquare.<br>\n",
+    "    I will cluster the data from:<br> <ol>1) Dallas, TX</ol> <ol>2) Jacksonville, FL</ol> <ol>3) Chicago, IL</ol> <ol>4) Austin, TX</ol> <ol>5) San Diego, CA</ol> I will find the neighborhoods most like my ideal match using SciKitlearn KMeans Clustering of Foursquare data. Next, a further segmentation by demographics, job availability, and income gathered from website and census data will help me choose my ideal neghborhood.  </h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:green;font-size:20pt\"> <ins>Data Collection:</ins></span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 align=\"justify\"> <ins>First I will gather the neighborhood names from a variety of websites including:</ins>\n",
+    "<ol><a href=\"http://www.Wikipedia.com\" target = _blank>Wikipedia.com</a></ol>\n",
+    "<ol><a href=\"http://www.Conservapedia.com\" target = _blank>Conservapedia.com</a></ol><br>\n",
+    "I will parse them using a combination of pandas.read_html, BeautifulSoup, requests, and json.</h4>"
    ]
   },
   {
@@ -40,7 +52,7 @@
     "pd.set_option('display.max_rows', None)\n",
     "import numpy as np\n",
     "\n",
-    "#Webscraoping modules fro obtaining data from the web\n",
+    "#Webscraoping modules from obtaining data from the web\n",
     "import re\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -608,13 +620,6 @@
     "    jacksonville_neighborhoods = jacksonville_neighborhoods.append({'Neighborhood':area}, ignore_index=True) \n",
     "jacksonville_neighborhoods['Neighborhood'] = jacksonville_neighborhoods['Neighborhood'].map(lambda x: x +', Jacksonville, '+ 'FL')\n",
     "jacksonville_neighborhoods.head()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Obtaining Location Data"
    ]
   },
   {
